[tool.poetry]
name = "test-lib"
version = "0.1.0"
description = ""
authors = ["jirathip-k <115384744+jirathip-k@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "test_lib", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
